[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/fonts/Consolas.tres" type="DynamicFont" id=1]
[ext_resource path="res://content/gui/overlays/other/PaymentOverlay.gd" type="Script" id=2]

[node name="PaymentOverlay" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 768.0
margin_bottom = 1408.0
mouse_filter = 2
color = Color( 0.257813, 0.257813, 0.257813, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Background"]
margin_right = 768.0
margin_bottom = 1365.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Background/Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 748.0
margin_bottom = 1345.0
custom_constants/separation = 32

[node name="RecipientLabel" type="Label" parent="Background/Margin/VBox"]
margin_right = 728.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Recipient"

[node name="AmountLabel" type="Label" parent="Background/Margin/VBox"]
margin_top = 66.0
margin_right = 728.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 1 )
text = "Amount"

[node name="InfoLabel" type="Label" parent="Background/Margin/VBox"]
margin_top = 132.0
margin_right = 728.0
margin_bottom = 166.0
custom_fonts/font = ExtResource( 1 )
text = "Please scan your face to authorize: "

[node name="ErrorLabel" type="RichTextLabel" parent="Background/Margin/VBox"]
margin_top = 198.0
margin_right = 728.0
margin_bottom = 270.0
rect_min_size = Vector2( 0, 72 )
custom_fonts/normal_font = ExtResource( 1 )
text = "Your bank account is blocked. Please consult your local bank."

[node name="OkButton" type="Button" parent="Background/Margin/VBox"]
margin_top = 302.0
margin_right = 728.0
margin_bottom = 430.0
rect_min_size = Vector2( 0, 128 )
custom_fonts/font = ExtResource( 1 )
text = "Start Face Authentication"

[node name="NotOkButton" type="Button" parent="Background/Margin/VBox"]
margin_top = 462.0
margin_right = 728.0
margin_bottom = 590.0
rect_min_size = Vector2( 0, 128 )
custom_fonts/font = ExtResource( 1 )
text = "Cancel"

[connection signal="pressed" from="Background/Margin/VBox/OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="pressed" from="Background/Margin/VBox/NotOkButton" to="." method="_on_NotOkButton_pressed"]
